// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<li
  className="divider"
>
  <a>
    <span
      style={
        Object {
          "marginLeft": "auto",
        }
      }
    />
  </a>
</li>
`;

exports[`Render should render icon if exists 1`] = `
<li
  className=""
>
  <a>
    <Icon
      className="css-290ig"
      name="icon-test"
    />
    <span
      style={
        Object {
          "marginLeft": "auto",
        }
      }
    />
  </a>
</li>
`;

exports[`Render should render nested submenu items 1`] = `
<li
  className=""
>
  <a>
    <Icon
      className="css-290ig"
      name="icon-test"
    />
    <span
      style={
        Object {
          "marginLeft": "auto",
        }
      }
    >
      <Icon
        name="angle-right"
      />
    </span>
  </a>
  <ul
    className="sidemenu dropdown-menu--sidemenu submenu"
  >
    <DropDownChild
      child={
        Object {
          "divider": false,
          "icon": "icon-test",
        }
      }
      key="undefined-0"
    />
  </ul>
</li>
`;
